# onlycat-tool

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  commands.py  docker-compose.yml  event_store.py  fly.toml  main.py  mcp_server.py  onlycat_client.py  pyproject.toml  setup-ec2.sh  streaming_finder.py  streaming_finder_web.py  sync.py
.github/workflows/: ci.yml  deploy.yml
chatgpt-app/: .gitignore  package.json  tsconfig.json
chatgpt-app/server/src/: index.ts
chatgpt-app/web/: vite.config.ts
chatgpt-app/web/src/: helpers.ts  index.css
chatgpt-app/web/src/widgets/: show-activity-chart.tsx  show-contraband-report.tsx  show-oni-status.tsx  show-trip-history.tsx
static/: manifest.json  sw.js
templates/: dashboard.html  share.html
tests/: test_analytics.py  test_api.py  test_event_store.py
