[project]
name = "onlycat-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-socketio[asyncio-client]>=5.16.1",
    "uvicorn[standard]>=0.42.0",
]
